# craft-parts

./: .bumpversion.cfg  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  .readthedocs.yml  .yamllint.yaml  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  common.mk  pom.xml  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-bionic.txt  requirements-dev.txt  requirements-focal.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: .copilot-collections.yaml  .jira_sync_config.yaml  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  renovate.json5
.github/ISSUE_TEMPLATE/: bug.yaml  config.yml
.github/skills/build-system-plugin-generator/: SKILL.md
.github/workflows/: apt-abi-mismatch.yaml  check-renovate.yaml  cla-check.yaml  copilot-collections-update.yaml  copilot-setup-steps.yaml  docs.yaml  policy.yaml  qa-github-hosted.yaml  qa-self-hosted.yaml  qa.yaml  release-publish.yaml  security-scan.yaml  test-in-container.yaml  tests.yaml  tics.yaml
craft_parts/: __init__.py  __main__.py  actions.py  callbacks.py  constraints.py  ctl.py  dirs.py  errors.py  features.py  filesystem_mounts.py  infos.py  layouts.py  lifecycle_manager.py  main.py  manager.py  partitions.py  parts.py  permissions.py  pydantic_schema.py  sandbox.py  schemas.py  sequencer.py  steps.py  unmarshal.py  xattrs.py
craft_parts/data/schema/: parts.json
craft_parts/executor/: __init__.py  build_slices.py  collisions.py  environment.py  errors.py  executor.py  filesets.py  migration.py  organize.py  part_handler.py  source_patches.py  step_handler.py
craft_parts/overlays/: __init__.py  chroot.py  errors.py  layers.py  overlay_fs.py  overlay_manager.py  overlays.py
craft_parts/plugins/: .base.py.kate-swp  __init__.py  _maven_util.py  _maven_xml.py  ant_plugin.py  autotools_plugin.py  base.py  bazel_plugin.py  cargo_package_plugin.py  cargo_registry_plugin.py  cargo_use_plugin.py  cmake_plugin.py  colcon_plugin.py  conda_plugin.py  dotnet2_plugin.py  dotnet_plugin.py  dotnet_v2_plugin.py  dump_plugin.py  go_plugin.py  go_use_plugin.py  gradle_plugin.py  gradle_plugin_validator.py  gradle_use_plugin.py  java_plugin.py  jlink_plugin.py  kernel_plugin.py  make_plugin.py  maven_plugin.py  maven_use_plugin.py  meson_plugin.py  mill_plugin.py  nil_plugin.py  ninja_plugin.py  npm_plugin.py  npm_use_plugin.py  plugins.py  pnpm_plugin.py  poetry_plugin.py  properties.py  python_plugin.py  (+8 more)
craft_parts/plugins/python_v2/: __init__.py  python_plugin.py
craft_parts/sources/: __init__.py  base.py  cache.py  checksum.py  component_source.py  deb_source.py  errors.py  file_source.py  git_source.py  local_source.py  rpm_source.py  sevenzip_source.py  snap_source.py  sources.py  tar_source.py  zip_source.py
craft_parts/state_manager/: __init__.py  build_state.py  overlay_state.py  prime_state.py  pull_state.py  reports.py  stage_state.py  state_manager.py  states.py  step_state.py
craft_parts/utils/: __init__.py  deb_utils.py  file_utils.py  fork_utils.py  formatting_utils.py  git.py  gradle_utils.py  layout_utils.py  maven_utils.py  npm_utils.py  os_utils.py  partition_utils.py  path_utils.py  process.py  process_utils.py  schema_helpers.py  snap_utils.py  url_utils.py
craft_parts/utils/maven/: __init__.py  _xml.py  common.py
docs/: .custom_wordlist.txt  .gitignore  .wordlist.txt  Makefile  changelog.rst  conf.py  craftctl.rst  examples.rst  exceptions.rst  implementation.rst  index.rst  infos.rst  lifecycle.rst  lifecycle_manager.rst  links.txt  parts_steps.rst  reference.rst  requirements.txt  sequencer.rst  spellingcheck.yaml
docs/.sphinx/: .wordlist.dic
docs/_static/css/: custom.css
docs/base/: dump_plugin.rst  maven_plugin.rst  overlay_parameters.rst  part_properties.rst  plugin_template.rst  python_plugin.rst  rust_plugin.rst  step_execution_environment.rst  step_execution_output.rst  step_output_directories.rst
docs/base/explanation/: how_parts_are_built.rst  parts.rst
docs/common/: README.md  __init__.py
docs/common/craft-parts/: craft-parts.wordlist.txt
docs/explanation/: cryptography.rst  documentation.rst  dump_plugin.rst  filesets.rst  how_parts_are_built.rst  implementation.rst  index.rst  lifecycle.rst  overlays.rst  parts.rst
docs/how-to/: cli_tool.rst  craftctl.rst  create_plugin.rst  document-plugin.rst  include_files.rst  index.rst  override_build.rst  partitions.rst  plugins.rst  source-handler.rst  use_parts.rst
docs/how-to/code/: use_parts.yaml
docs/how-to/source-handler/: rsync_parts.yaml  rsync_source.py
docs/image-sources/: class_diagram.drawio  overlay_migration.drawio  partition_migration.drawio  partition_overlay_migration.drawio  simple_migration.drawio
docs/images/: lifecycle_logic.drawio  overlay_checksum.drawio
docs/reference/: actions.rst  changelog.rst  exceptions.rst  index.rst  infos.rst  lifecycle_manager.rst  part_properties.rst  parts_keys.rst  parts_steps.rst  plugins.rst  reference.rst
docs/reference/plugins/: dump_plugin.rst  index.rst  maven_plugin.rst  plugin_template.rst  python.rst  python_plugin.rst  rust_plugin.rst
docs/tutorials/: examples.rst  hello-craft-parts.rst  index.rst
requirements/: uv-requirements.--all-extras.txt
specs/: build-slices-approaches.md  build-slices-implementation-plan.md  build-slices.md
tests/: __init__.py  conftest.py  fake_servers.py  fake_snap_command.py  fake_snapd.py
tests/integration/: __init__.py  test_logging.py  test_main.py  test_pydantic_schema.py
tests/integration/executor/: test_callbacks.py  (+7 more)
tests/integration/plugins/test_poetry/: pyproject.toml
tests/integration/plugins/test_poetry/test_poetry/: __init__.py  __main__.py
tests/unit/: common_plugins.py  test_actions.py  test_callbacks.py  test_ctl.py  test_dirs.py  test_errors.py  test_features.py  test_filesystem_mounts.py  test_infos.py  test_layouts.py  test_lifecycle_manager.py  test_manager.py  test_parts.py  test_permissions.py  test_pydantic_schema.py  test_schemas.py  test_sequencer.py  test_steps.py  test_unmarshal.py  test_xattrs.py
tools/: freeze-requirements.sh
(+445 files in other folders)
