[tool.poetry]
name = "test-poetry"
version = "0.1.0"
description = ""
authors = ["Alex Lowe <alex.lowe@canonical.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
distro = "==1.8.0"

[tool.poetry.scripts]
mytest = "test_poetry:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
